[package]
name = "chargeuk_rapier3d" # Can't be named rapier3d which conflicts with the dependency.
version = "0.9.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust - official JS bindings."
documentation = "https://rapier.rs/rustdoc/rapier2d/index.html"
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier.js"
readme = "README.md"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
edition = "2018"

[features]
default = ["dim3"]
dim3 = []

[lib]
name = "rapier_wasm3d"
path = "../src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = ["dim3"]


[dependencies]
# rapier3d = { version = "^0.13.0", features = ["wasm-bindgen", "serde-serialize", "enhanced-determinism", "debug-render"] }
rapier3d = { path = "../../../rapier/code/crates/rapier3d", features = ["wasm-bindgen", "serde-serialize", "simd-stable", "debug-render"] }
ref-cast = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.31"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
crossbeam-channel = "0.4"
palette = "0.6"

[profile.release]
debug = false
codegen-units = 1
lto = true
opt-level = 3

[release]
debug = false
codegen-units = 1
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
# add -g to keep debug symbols
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false